@@ -569,7 +569,9 @@ class LaTeXTranslator(nodes.NodeVisitor):
     # ---------
     
     latex_head = '\\documentclass[%s]{%s}\n'
-    linking = '\\usepackage[colorlinks=%s,linkcolor=%s,urlcolor=%s]{hyperref}\n'
+    linking = "\\ifthenelse{\\isundefined{\\hypersetup}}{\n" \
+            +"\\usepackage[colorlinks=%s,linkcolor=%s,urlcolor=%s]{hyperref}\n" \
+            +"}{}\n"
     stylesheet = '\\input{%s}\n'
     # add a generated on day , machine by user using docutils version.
     generator = '% generated by Docutils <http://docutils.sourceforge.net/>\n'
@@ -693,7 +695,6 @@ class LaTeXTranslator(nodes.NodeVisitor):
               '\\usepackage{color}\n',
               '\\usepackage{multirow}\n',
               '\\usepackage{ifthen}\n',   # before hyperref!
-              self.linking % (self.colorlinks, self.hyperlink_color, self.hyperlink_color),
               self.typearea,
               self.generator,
               # latex lengths
@@ -717,6 +718,10 @@ class LaTeXTranslator(nodes.NodeVisitor):
         if stylesheet:
             settings.record_dependencies.add(stylesheet)
             self.head_prefix.append(self.stylesheet % (stylesheet))
+        # hyperref after stylesheet
+        # TODO conditionally if no hyperref is used dont include
+        self.head_prefix.append( self.linking % (
+                    self.colorlinks, self.hyperlink_color, self.hyperlink_color))
 
         if self.linking: # and maybe check for pdf
             self.pdfinfo = [ ]
