@@ -12,7 +12,6 @@
 \usepackage{color}
 \usepackage{multirow}
 \usepackage{ifthen}
-\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
 \usepackage[DIV12]{typearea}
 % generated by Docutils <http://docutils.sourceforge.net/>
 \newlength{\admonitionwidth}
@@ -55,6 +54,9 @@
 \newcommand{\rubric}[1]{\subsection*{~\hfill {\it #1} \hfill ~}}
 \newcommand{\titlereference}[1]{\textsl{#1}}
 % end of "some commands"
+\ifthenelse{\isundefined{\hypersetup}}{
+\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
+}{}
 \title{reStructuredText Test Document\\
 \large{Examples of Syntax Constructs}
 }
